--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
     <script>
         const micButton = document.getElementById('micButton');
+        checkBrowserSupport();
         const textDisplay = document.getElementById('textDisplay');
 
         function displayText(text) {
