--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <div id="textDisplay" role="status" aria-live="polite"></div>
     <button id="micButton" cl
-    <button id="micButton" class="start-button" aria-label="Voice command button - Tap to speak"></button>
+    <button id="micButton" class="start-button" aria-label="Voice command button - Tap to speak" onclick="handleClick()"></button>
 
     <script>
         const micButton = document.getElementById('micButton');
