--- a/index.html
+++ b/index.html
@@ -172,11 +172,12 @@
         const abilities = [
             { name: 'Icy Blast', damage: 25, cost: 25, type: 'freeze', description: 'Deals damage and freezes enemy for 1 turn', class: 'mage' },
             { name: 'Shield Bash', damage: 30, cost: 20, type: 'stun', description: 'Stun enemy for one turn', class: 'warrior' },
-            { name: 'Poison Blade', damage: 20, cost: 20, type: 'poison', duration: 3, description: 'Poison damages 5 per turn for 3 turns', class: 'rogue' },
-            { name: 'Chain Lightning', damage: 35, cost: 30, type: 'damage', description: 'Devastating lightning attack', class: 'mage' },
+            { name: 'Poison Blade', damage: 20, cost: 20, type: 'poison', duration: 3, description: 'PoisellableItem 10 per turn for 3 turns', class: 'rogue' },
+            { name: 'Chain Lightning', damage: 40, cost: 30, type: 'damage', description: 'Lightning attack that deals damage across multiple enemies, class: 'mage' },
             { name: 'Arcane Missiles', damage: 22, cost: 18, type: 'damage', description: 'Multiple magic missiles', class: 'mage' },
-            { name: 'Whirlwind', damage: 28, cost: 25, type: 'damage', description: 'Spin attack dealing massive damage', class: 'warrior' },
+            { name: 'Whirlwind', damage: 38, cost: 25, type: 'aoe', description: 'Spin attack dealing full damage to all enemies', class: 'warrior' },
             { name: 'Shadow Strike', damage: 32, cost: 22, type: 'damage', description: 'Strike from the shadows', class: 'rogue' }
+            { name: 'Flurry Of Strikes', damage: 40, cost: 18, type: 'damage', description: '3 Quick attacks does damage to all enemies', class: 'mage' },
         ];
 
         const amulets = [
@@ -700,8 +701,8 @@
                 return;
             }
 
-            if (game.player.equippedRings.length >= 2) {
-                speak(`You already have 2 rings equipped. You must remove one first.`);
+            if (game.player.equippedRings.length >= 10) {
+                speak(`You already have 10 rings equipped. You must remove one first.`);
                 return;
             }
 
