--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
             { name: 'Shield Bash', damage: 60, cost: 20, type: 'stun', description: 'Stun enemy for one turn', class: 'warrior' },
             { name: 'Poison Blade', damage: 30, cost: 20, type: 'poison', duration: 3, description: 'Poison damages 5 per turn for 3 turns', class: 'rogue' },
             { name: 'Chain Lightning', damage: 75, cost: 30, type: 'damage', description: 'Devastating lightning attack', class: 'mage' },
-            { name: 'Arcane Missiles', damage: 42, cost: 18, type: 'aoe', description: 'Magic missiles hit all enemies', class: 'mage' },
-            { name: 'Whirlwind', damage: 48, cost: 25, type: 'damage', description: 'Spin attack dealing massive damage', class: 'warrior' },
-            { name: 'Shadow Strike', damage: 32, cost: 22, type: 'damage', description: 'Strike from the shadows', class: 'rogue' }
+            { name: 'Arcane Missiles', damage: 65, cost: 15, type: 'aoe', description: 'Magic missiles hit all enemies', class: 'mage' },
+            { name: 'Whirlwind', damage: 50, cost: 25, type: 'aoe', description: 'Spin attack hitting all enemies',
+            { name: 'Shadow Strike', damage: 40, cost: 20, type: 'sneak', description: 'Strike from shadows without enemy retaliation', class: 'rogue' },
         ];
 
         const amulets = [
@@ -978,6 +978,30 @@
                         });
                     } else {
                         setTimeout(() => enemyTurn(), 1000);
+                    }
+                });
+                } else if (spellToCast.type === 'sneak') {
+                let levelBonus = game.player.level * 5;
+                const totalDamage = spellToCast.damage + levelBonus;
+                
+                game.combat.enemy.health -= totalDamage;
+                
+                speakSequence([
+                    `You strike from the shadows!`,
+                    `${totalDamage} damage!`,
+                    `The enemy doesn't see you coming!`,
+                    `${game.combat.enemy.name} has ${Math.max(0, game.combat.enemy.health)} health left.`
+                ], () => {
+                    if (game.combat.enemy.health <= 0) {
+                        if (game.combat.secondEnemy && game.combat.secondEnemy.health > 0) {
+                            game.combat.enemy = game.combat.secondEnemy;
+                            game.combat.secondEnemy = null;
+                            speak(`${game.combat.enemy.name} remains! Health: ${game.combat.enemy.health}.`);
+                        } else {
+                            setTimeout(() => combatVictory(), 1000);
+                        }
+                    } else {
+                        speak('You vanish before they can counter!');
                     }
                 });
             } else if (spellToCast.type === 'damage') {
